--- a/papers/AE2011/ae2011.tex
+++ b/papers/AE2011/ae2011.tex
@@ -50,9 +50,9 @@ Learn-and-Optimize ~(LaO) ~is ~a ~generic ~surrogate ~based method for parameter
 
 Parameter tuning is basically a general optimization problem applied off-line to find the best parameters for complex algorithms, for example for Evolutionary Algorithms (EAs). Whereas the efficiency of EAs has been demonstrated on several application domains \cite{practice08,ParameterSettingBook07}, they usually need computationally expensive parameter tuning. Being a general optimization problem, there are as many parameter tuning algorithms as optimization techniques. However, several specialized methods have been proposed, and the most prominent ones today are Racing \cite{birattari2002}, REVAC \cite{Nannen07}, SPO \cite{SPO:CEC05}, and ParamILS \cite{ParamILS-JAIR}. All these approaches face the same crucial generalization issue: can a parameter set that has been optimized for a given problem be successfully used for another one? The answer of course depends on the similarity of both problems.
 
-However, in AI Planning, sufficiently accurate features have not been specified that would allow to describe the problem, no design of a general learning framework has been proposed, and no general experiments have been carried out. This paper makes a step toward a framework for parameter tuning applied generally to AI Planning and proposes a preliminary set of features. The Learn-and-Optimize (LaO) framework consists of the combination of optimizing and learning, i.e., finding the mapping between features and best parameters. Furthermore, the results of learning will already be useful during further the optimization phases, using the learned model as in standard surrogate-model based techniques (see e.g., \cite{Bardenet} for a Gaussian-process-based approach).
+However, until now, in AI Planning, sufficiently accurate features have not been specified that would allow to describe the problem, no design of a general learning framework has been proposed, and no general experiments have been carried out. This paper makes a step toward a framework for parameter tuning applied generally to AI Planning and proposes a preliminary set of features. The Learn-and-Optimize (LaO) framework consists of the combination of optimizing and learning, i.e., finding the mapping between features and best parameters. Furthermore, the results of learning will already be useful to further the optimization phases, using the learned model as in standard surrogate-model based techniques (see e.g., \cite{Bardenet} for a Gaussian-process-based approach).
 
-In this paper, the target optimization technique is Evolutionary Algorithms (EA), more precisely the evolutionary AI planner called Divide-and-Evolve (DaE). However, DaE will be here considered as a black-box algorithm, without any modification for the purpose of this work than its original version described in \cite{BibEvoCop:2010}. 
+In this paper, the target optimization technique is an Evolutionary Algorithm (EA), more precisely the evolutionary AI planner called Divide-and-Evolve (DaE). However, DaE will be here considered as a black-box algorithm, without any modification for the purpose of this work compared to its original version described in \cite{BibEvoCop:2010}. 
 
 The paper is organized as follows: AI Planning Problems and the Divide-and-Evolve algorithm are briefly introduced in section \ref{section:planning}. Section \ref{section:LaO} introduces the original, top level parameter tuning method, Learn-and-Optimize. The case study presented in Section \ref{section:results} applies LaO to DaE, following the rules of the International Planning Competition 2011 -- Learning Track. Finally, conclusions are drawn and further directions of research are proposed in Section \ref{section:conclusions}. 
 
@@ -78,22 +78,22 @@ a state; or at the state level by adding (addAtom) or removing (delAtom) some at
 
 \subsection{The General LaO Framework}
 
-As already mentioned, parameter tuning is actually a general global optimization problem, thus facing the routine issue of local optimality. But a further problem arises in parameter tuning, and this is the generality of the tuned parameters. Generalizing parameters learned on one instance to another instance of the same domain might be problematic, as there are instances with very different complexity in the same domain. For example in \cite{BibGECCO:2010} per-domain tuning was performed with the most difficult, largest instance, considered as a representative of the whole domain. However, it is clear from the results that these parameters were often suboptimal for the other instances. One workaround to this generalization issue is to relax the constraint of finding a single universally optimal parameter-set, that certainly does not exist, and to focus on learning a complex relation between instances and optimal parameters. The proposed Learn-and-Optimize framework (LaO) aims at learning such a relation by adding learning to optimization. The underlying hypothesis is that there exists a relation between some features describing an instance and the optimal parameters for solving this instance which can be learned, and the goal of this work is to propose a general methodology to do so. 
+As already mentioned, parameter tuning is actually a general global optimization problem, thus facing the routine issue of local optimality. But a further problem arises in parameter tuning, and this is the generality of the tuned parameters. Generalizing parameters learned on one instance to another instance might be problematic, because there are instances with very different complexity in the same domain. For example in \cite{BibGECCO:2010} per-domain tuning was performed with the most difficult, largest instance, considered as a representative of the whole domain. However, it is clear from the results that these parameters were often suboptimal for the other instances. One workaround to this generalization issue is to relax the constraint of finding a single universally optimal parameter-set, that certainly does not exist, and to focus on learning a complex relation between instances and optimal parameters. The proposed Learn-and-Optimize framework (LaO) aims at learning such a relation by adding learning to optimization. The underlying hypothesis is that there exists a relation between some features describing an instance and the optimal parameters for solving this instance which can be learned, and the goal of this work is to propose a general methodology to do so. 
 
 Suppose for now that we have $n$ features and $m$ parameters, and we are doing per-instance parameter tuning on instance $\cal I$. For the sake of simplicity and generality, both the fitness, the features and the parameters are considered as real values. Parameter tuning is the optimization (e.g., minimization) of the fitness function \begin{math}f_{\cal I}:\mathbf{R}^m\to \mathbf{R} \end{math}, the expected value of the stochastic algorithm DaE executed with parameter \begin{math} p \in \mathbf{R}^m \end{math}. The optimal parameter set is defined by \begin{math} p_{opt}=argmin_p\{f_{\cal I}(p)\} \end{math}. For each instance $\cal I$, consider the set \begin{math} F({\cal I}) \in \mathbf{R}^n \end{math} of the features describing this instance. 
 Two relations have to be taken into account: each planning instance has features, and it has an optimal parameter-set. In order to be able to generalize, we have to get rid of the instance, and collapse both relations into one single relation between feature-space and parameter-space. For the sake of simplicity let us assume that there exists an unambiguous mapping from the feature space to the optimal parameter space. 
 
-\begin{equation} p_F: \mathbf{R}^n \to \mathbf{R}^m, p_F(F)=p_{opt} \end{equation}.	
+\begin{equation} p: \mathbf{R}^n \to \mathbf{R}^m, p(F)=p_{opt} \end{equation}.	
 
-The relation \begin{math} p_F \end{math} between features and optimal parameters can be learned by any supervised learning method capable of representing, interpolating and extrapolating  \begin{math}\mathbf{R}^n\to \mathbf{R}^m \end{math} mappings, provided sufficient data are available.
+The relation \begin{math} p \end{math} between features and optimal parameters can be learned by any supervised learning method capable of representing, interpolating and extrapolating  \begin{math}\mathbf{R}^n\to \mathbf{R}^m \end{math} mappings, provided sufficient data are available.
 
-The idea of using some surrogate model in optimization is not new. Here, however, there are  several instances to optimize, and only one model is available, that maps the feature-space into the parameter-space. Nevertheless, there is no question about how to use such a model of \begin{math}p_F\end{math} in optimization: one can always ask the model for hints about a given parameter-set. It seems reasonable that the stopping criterion of LaO is determined by the stopping criterion of the optimizer algorithm. After exiting one can also do a re-training of the learner with the best parameters found.
+The idea of using some surrogate model in optimization is not new. Here, however, there are  several instances to optimize, and only one model is available, that maps the feature-space into the parameter-space. Nevertheless, there is no question about how to use such a model of \begin{math}p\end{math} in optimization: one can always ask the model for hints about a given parameter-set. It seems reasonable that the stopping criterion of LaO is determined by the stopping criterion of the optimizer algorithm. After exiting one can also do a re-training of the learner with the best parameters found.
 
 \subsection{An Implementation of LaO}
 
-A simple multilayer Feed-Forward Artificial Neural Network (ANN) trained with standard backpropagation was chosen here for the learning of the features-to-parameters mapping, though any other supervised-learning algorithm could have been used. The implicit hypothesis is that the relation \begin{math}p_F\end{math} is not very complex, which means that a simple ANN may be used. In this work, one mapping is trained for each domain. Training a single domain-independent ANN is left for future work. The other decision for LaO implementation is the choice of the optimizer used for parameter tuning. Because parameter optimization will be done successively for several instances, the simple yet robust (1+1)-Covariance Matrix Adaptation Evolution Strategy \cite{hansen2001ecj}, in short (1+1)-CMA-ES,  was chosen, and used with its robust own default parameters, as advocated in \cite{BibGECCO:2010}.
+A simple multilayer Feed-Forward Artificial Neural Network (ANN) trained with standard backpropagation was chosen here for the learning of the features-to-parameters mapping, though any other supervised-learning algorithm could have been used. The implicit hypothesis is that the relation \begin{math}p\end{math} is not very complex, which means that a simple ANN may be used. In this work, one mapping is trained for each domain. Training a single domain-independent ANN is left for future work. The other decision for LaO implementation is the choice of the optimizer used for parameter tuning. Because parameter optimization will be done successively for several instances, the simple yet robust (1+1)-Covariance Matrix Adaptation Evolution Strategy \cite{hansen2001ecj}, in short (1+1)-CMA-ES,  was chosen, and used with its robust own default parameters, as advocated in \cite{BibGECCO:2010}.
 
-One original component, though, was added to some direct approach to parameter tuning: gene-transfer between instances. There will be one (1+1)-CMA-ES running for each instance, because using larger population sizes for a single instance would be far too costly. However, the (1+1)-CMA-ES algorithms running on all training instances form a population of individuals. The idea of Genetransfer is to use something like a crossover between the individuals of this population. Of course, the optimal parameter sets for the different instances are different; However, good 'chromosomes' for one instance may at least help another instance. Thus it may be used as a hint in the optimization of that other instance. Therefore random gene-transfer was used in the present implementation of LaO, by calling the so-called {\em Genetransferer}. When the Genetransferer is requested for a hint for one instance, it returns the so-far best parameter of a different instance chosen with uniform random distribution (preventing, of course, that the default parameters are tried twice). Another benefit from gene-transfer is that it may smoothen out the ambiguities between instances, by increasing the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features. Figure \ref{figure:laoflowchart} shows the LAO framework with the described implementations.
+One original component, though, was added to some direct approach to parameter tuning: gene-transfer between instances. There will be one (1+1)-CMA-ES running for each instance, because using larger population sizes for a single instance would be far too costly. However, the (1+1)-CMA-ES algorithms running on all training instances form a population of individuals. The idea of gene-transfer is to use something like a crossover between the individuals of this population. Of course, the optimal parameter sets for the different instances are different; However, good 'chromosomes' for one instance may at least help another instance. Thus it may be used as a hint in the optimization of that other instance. Therefore random gene-transfer was used in the present implementation of LaO, by calling the so-called {\em Genetransferer}. When the Genetransferer is requested for a hint for one instance, it returns the so-far best parameter of a different instance chosen with uniform random distribution (preventing, of course, that the default parameters are tried twice). Another benefit of Genetransfer is that it may smoothen out the ambiguities between instances, by increasing the probability for instances with the same features to test the same parameters, and thus the possibility to find out that the same parameters are appropriate for the same features. Figure \ref{figure:laoflowchart} shows the LAO framework with the described implementations.
 
 \begin{figure}[h!]
   \centering
@@ -145,18 +145,18 @@ Number of offsprings & 100& 2 000& 700 \\
 \end{table*} 
 
 
-One additional technical difficulty arose with CMA-ES: each parameter is here restricted to an interval. This seems reasonable and makes the global algorithm more stable. Hence the parameters of the optimizer are actually normalized linearly onto the [0,1] interval. It is hence possible to apply a simple version of the box constraint handling technique described in \cite{hansen2009tec}, with a penalty term simply defined by \begin{math}||p^{feas}-p|| \end{math}, where \begin{math}p^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}p^{feas}\end{math} was recorded as a feasible solution , and later passed to the ANN. Note that the GeneTransferer and the ANN itself cannot send hints outside of the box. In order to not to compromise too much CMA-ES, several iterations of this were carried out for one hint of the ANN and one gene-transfer.
+One additional technical difficulty arose with CMA-ES: each parameter is here restricted to an interval. This seems reasonable and makes the global algorithm more stable. Hence the parameters of the optimizer are actually normalized linearly onto the [0,1] interval. It is hence possible to apply a simple version of the box constraint handling technique described in \cite{hansen2009tec}, with a penalty term simply defined by \begin{math}||p^{feas}-p|| \end{math}, where \begin{math}p^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}p^{feas}\end{math} was recorded as a feasible solution , and later passed to the ANN. Note that the GeneTransferer and the ANN itself cannot return hints outside of the box. In order to not to compromise too much CMA-ES, several iterations of this were carried out for one hint of the ANN and one Genetransferer.
 
-The implementation of LaO algorithm uses the Shark library \cite{shark08} for CMA-ES and the FANN library for ANN \cite{nissen}. To evaluate each parameter-setting with each instance,  a cluster was used, that has approximately 60 nodes, most of them with 4 cores, some with 8. Because of the heterogeneity of the hardware architecture used here, it is not possible to rely on accurate predicted running times. Therefore, for each evaluation, the number of YAHSP evaluations in DaE is fixed. Moreover, since DaE is not deterministic, 11 independent runs were carried out for each DaE experiment with a given parameter-set, and the fitness of this parameter set was taken to be the median fitness-value obtained by DaE.
+The implementation of LaO algorithm uses the Shark library \cite{shark08} for CMA-ES and the FANN library for ANN \cite{nissen}. To evaluate each parameter-setting with each instance,  a cluster was used, that has approximately 60 nodes, most of them with 4 cores, some with 8. Because of the heterogeneity of the hardware architecture used here, it is not possible to rely on accurate predicted running times. Therefore, for each evaluation, the number of YAHSP evaluations in DaE is fixed. Moreover, since DaE is not deterministic, 11 independent runs were carried out for each DaE experiment with a given parameter-set, and the fitness of this parameter set was taken to be the median.
 
 \section{Results}
 \label{section:results}
 
-In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-published, with a corresponding problem-generator for each domain: Ferry, Freecell, Grid, Mprime, and Sokoban. Ferry and Sokoban were excluded from this study since there were not enough number of instances to learn any mapping. For each of the remaining 3 domains, approximately 100 instances were generated, since this seemed to be appropriate for a running time of 2-3 weeks. The competition track description fixes running time as 15 minutes. However, many instances were never solved within 15 minutes, and those instances were dropped from the rest of experiment. The remaining instances were used for training.
+In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-published, with a corresponding problem-generator for each domain: Ferry, Freecell, Grid, Mprime, and Sokoban. Ferry and Sokoban were excluded from this study since there were not enough number of instances to learn any mapping. For each of the remaining 3 domains, approximately 100 instances were generated, with the published generators and distribution (ranges) of generator-parameters 100 instances per domain seemed to be appropriate for a running time of 2-3 weeks. The competition track description fixes running time as 15 minutes. However, many instances were never solved within 15 minutes, and those instances were dropped from the rest of experiment. The remaining instances were used for training.
 
-The real IPC competition domains of the same track were released later. These domains were much harder, meaning that most of the official train instances could not be solved at all by DaE in 15 minutes. Therefore the published instance-generators were used, with a lower range of the generator-parameters. Even this way, we can only present one domain: Parking. For the other domains, the number of training instances, or the iterations of LaO carried out until the deadline is not sufficient to take the case-study seriously.
+The real IPC competition domains of the same track were released later. These domains were much harder, meaning that most of the official train instances could not be solved at all by DaE in 15 minutes. Therefore the published instance-generators were used, but with a lower range of the generator-parameters. Even this way, we can only present one domain: Parking. For the other domains, the number of training instances, or the iterations of LaO carried out until the deadline is not sufficient to take the case-study seriously.
 
-For the domain Parking, the generator-parameter "number\_of\_curbs" was running from 6 to 56 with step 5, and "number\_of\_cars" from 6 to 31 with step 1. This means a total number of 250 instances. Out of these 230 was solvable and 101 randomly selected were used for train and the remaining 129 for test. However, even generating easier instances would not solve the issue itself: some default parameters had also be changed as "Population size"=1 and "Number of offsprings"=1. Only this way could we solve enough number of instances and get some values for the number of evaluations. The range of the parameters allowed in LaO  was also changed: the lower range of Maximum number of stations, Maximum number of nodes, Population size, and Number of offsprings was set to 1.
+For the domain Parking, the generator-parameter "number\_of\_curbs" was running from 6 to 56 with step 5, and "number\_of\_cars" from 6 to 31 with step 1. This means a total number of 250 instances. Out of these 230 was solvable and 101 randomly selected were used for train and the remaining 129 for test. However, even generating easier instances would not solve the issue itself: two default parameters had also be changed as "Population size"=1 and "Number of offsprings"=1. Only this way could we solve enough number of instances and get some values for the number of evaluations. The range of the parameters allowed in LaO (the box) was also changed: the lower range of Maximum number of stations, Maximum number of nodes, Population size, and Number of offsprings was set to 1.
 
 
  \begin{table}[tb!]
@@ -178,27 +178,30 @@ Parking &  ~0 -- 12 & 68 -- 65  &  15 -- 14   & 17 -- 9   &    \\
 \end{table} 
 
 
-Table \ref{table:domains} presents the trains and tests for each domain. The Mean Square Error (MSE) of the trained ANN is shown for each domain. Note that because the fitness takes only few values, there can be multiple optimal parameter sets for the same instance, resulting in an unavoidable MSE. So we do not expect this error to converge to 0. One iteration of LaO amounts to 5 iterations of CMA-ES, followed by one ANN training and one Genetransferer. Due to the time constraints, only 10 iterations of LaO were run on the Grid, hence CMA-ES was called 50 times in total.
+Table \ref{table:domains} presents the trains and tests for each domain. The Mean Square Error (MSE) of the trained ANN is shown for each domain. Note that because the fitness takes only few values, there can be multiple optimal parameter sets for the same instance, resulting in an unavoidable MSE. So we do not expect this error to converge to 0. One iteration of LaO amounts to 5 iterations of CMA-ES, followed by one ANN training and one Genetransferer. Due to the time constraints, only a few iterations of LaO were run. For example the 10 iterations in domain Grid amounts to 500 CMA-ES calls in total.
 
-The ANN had 3 fully connected layers, the layers had all 12 neurons, corresponding to the number or parameters and features, respectively. Standard back-propagation algorithm was used for learning (the default in FANN). In one iteration of LaO, the ANN was only trained for 50 iterations (aka epochs) without reseting the weights, in order to i- avoid over-training, and ii- making a gradual transition from the previous best parameter-set to the new best one, and eventually try some intermediate values. Hence. over the 10 iterations of LaO, 500 iterations (epochs) of the ANN were carried out in total. However, note that the best parameters were trained with much fewer iterations, depending on the time of their discovery. In the worst case, if the best parameter was found in the last iteration of LaO, it was trained for only 50 epochs and not used anymore. This explains why retraining is needed in the end.
+The ANN had 3 fully connected layers, the layers had all 12 neurons, corresponding to the number or parameters and features, respectively. Standard back-propagation algorithm was used for learning (the default in FANN). In one iteration of LaO, the ANN was only trained for 50 iterations (aka epochs) without reseting the weights, in order to i- avoid over-training, and ii- making a gradual transition from the previous best parameter-set to the new best one, and eventually try some intermediate values. Hence, over the 10 iterations of LaO, 500 iterations (epochs) of the ANN were carried out in total. However, note that the best parameters were trained with much fewer iterations, depending on the time of their discovery. In the worst case, if the best parameter was found in the last iteration of LaO, it was trained for only 50 epochs and not used anymore. This explains why retraining is needed in the end.
 
-A parameter-set in LaO may come from different sources, namely it can be the default parameter-set, or coming from CMA-ES, the Genetransferer, or as a result of applying the surrogate-ANN to the instance features. Table \ref{table:hints} shows how each source contributes to the best overall parameter-settings. For each possible source, the first number is the ratio the source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account. Note that the order of the sources is as it is in the table: for example if CMA-ES found a different parameter-settings with the same fitness than the default, this case is not included in the first ratio, but is in the second. Analyzing both numbers leads to the following conclusions: for domain Mprime, the default parameter-settings was the optimal for 45\% of the instances. However, only in 2\% of the instances there was no other parameter-setting found with the same quality. In the domain Freecell, the share of ANN is quite high (18\%), moreover we can see that in most cases, the other sources did not find a parameter-set with the same performance (17\%). While Genetransferer in Freecell take equal share (18\%) of all the best parameters, but only a part of them (8\%) were unique. Note that CMA-ES was returning the first hint in each iteration and had 5 times more possibilities than the ANN. Taking this into account, it is clear that both the ANN and Genetransferer made an important contribution to optimization.
+A parameter-set in LaO may come from different sources, namely it can be the default parameter-set, or coming from CMA-ES, the Genetransferer, or as a result of applying the surrogate-ANN to the instance features. Table \ref{table:hints} shows how each source contributes to the best overall parameter-settings. For each possible source, the first number is the ratio the source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account. Note that the order of calling the "sources" in LaO is the same as in the table: for example if CMA-ES found a different parameter-settings with the same fitness than the default, this case is not included in the first ratio, but is in the second. Analyzing both numbers leads to the following conclusions: for domain Mprime, the default parameter-settings was the optimal for 45\% of the instances. However, only in 2\% of the instances there was no other parameter-setting found with the same quality. In the domain Freecell, the share of ANN is quite high (18\%), moreover we can see that in most cases, the other sources did not find a parameter-set with the same performance (17\%). While Genetransferer in Freecell take equal share (18\%) of all the best parameters, but only a part of them (8\%) were unique. Note that CMA-ES was returning the first hint in each iteration and had 5 times more possibilities than the ANN. Taking this into account, it is clear that both the ANN and Genetransferer made an important contribution to optimization.
 
 LaO has been running for several weeks on a cluster. But this cluster was not dedicated to our experiments, i.e. only a small number of 4 or 8-core processors were available for each domain on average. After stopping LaO, retraining was made with 300 ANN epochs with the best data, because the ANN's saved directly from LaO may be under-trained. The MSE error in retraining of the ANN did not decrease using more epochs, which indicates that 300 iterations are enough at least for this amount of data and for this size of the ANN. Tests with 1000 iterations did not produce better results and neither did the training of the ANN uniquely, i.e. only with the first found best parameters.
 
-The controlled parameters of DaE are described in table \ref{table:parameters}. For a detailed description of these parameters, see \cite{BibGECCO:2010}. The feature-set consists of 12 features. The first 5 features are computed from the domain file, after the initial grounding of YAHSP: number of fluents, goals, predicates, objects and types. One further feature we think could even be more important is called mutex-density, which is the number of mutexes divided by the number of all fluent-pairs. We also kept 6 less important features: number of lines, words and byte-count - obtained by the linux command "wc" - of the instance and the domain file. These features were kept only for historical reasons: they were used in the beginning as some "dummy" features.
+The controlled parameters of DaE are described in table \ref{table:parameters}. For a detailed description of these parameters, see \cite{BibGECCO:2010}. The feature-set consists of 12 features. The first 5 features are computed from the domain file, after the initial grounding of YAHSP: number of fluents, goals, predicates, objects and types. One further feature we think could even be more important is called mutex-density, which is the number of mutexes divided by the number of all fluent-pairs. We also kept 6 less important features: number of lines, words and byte-count - obtained by the Linux-command "wc" - of the instance and the domain file. These features were kept only for historical reasons: they were used in the beginning as some "dummy" features.
 
-Since testing was also carried out on the cluster, the termination criterion for testing was also the number of evaluations for each instance. For evaluation the quality-improvement the quality-ratio metric defined in IPC competitions was used. A baseline experiment comes from the default parameter-setting. The ratio of the fitness value for the default parameter and the tuned parameter was computed and average was taken over the instances in the train or test-set. 
+Since testing was also carried out on the cluster, the termination criterion for testing was also the number of evaluations for each instance. For evaluation the quality-improvement the quality-ratio metric defined in IPC competitions was used. The baseline qualities come from the default parameter-setting. The ratio of the fitness value for the default parameter and the tuned parameter was computed and average was taken over the instances in the train or test-set. 
 
 \begin{equation}Q=\frac{Fitness_{baseline}}{Fitness_{tuned}}\end{equation}
 
-Table \ref{table:domains} presents several quality-improvement ratios. Label "in LaO" means that the best found parameter is compared to the default. By definition, this ratio can never be less than 1. This improvement indicated by high quality-ratio is already useful if the very same instances used in training have to be optimized. Quality-improvement ratios for the retrained ANN on both the training-set and the test-set are also presented. In these later cases, numbers less then 1 are possible (the parameters resulting from the retrained ANN can give worse results that the ones given by the original ANN), but were rare. As it can be seen in Table \ref{table:domains}, some quality-gain in training was consistently achieved, for the domain Parking even a high, almost 50\% gain could be reached with only 11 iterations. On the other hand, the transfer of this improvement to the ANN-model was only partial. The phenomenon can appear because of the unambiguity of the mapping, or because the ANN is not complex enough for the mapping, or, and most probably, because the feature-set is not representative enough. On the other hand, the ANN model generalizes excellently to the independent test-set, at least for the first 3 domains. Quality-improvement ratios dropped only by 0.01, i.e. the knowledge incorporated in the ANN was transferable to the test cases and usable almost to the same extent than for the train set. The results are quite similar for all domain. Even the size of the training set seems not to be so crucial. For example for Freecell all the instances (108 out of 108 generated) could be used, because they were not so hard. On the other hand, only few  Grid instances (55 out of 107 generated) could be used. However, both performed well. The explanation for this may be that both the 32 and 108 instances covered well the whole range of solvable instances. The situation is somewhat different for the last domain: Parking. Here we have a high quality-gain in training, even much of this could be learned by the ANN, however, here we have a huge drop for the test-set. The reason for this is that there is a considerable number of instances which get unsolvable with the parameters suggested by ANN. Still, we get some overall gain in average, in fact we get the highest gain for this domain. The main issue for such hard domains will be to avoid much more effectively unfeasible parameters.
+Table \ref{table:domains} presents several quality-improvement ratios. Label "in LaO" means that the best found parameter is compared to the default. By definition, this ratio can never be less than 1. This improvement indicated by high quality-ratio is already useful if the very same instances used in training have to be optimized. Quality-improvement ratios for the retrained ANN on both the training-set and the test-set are also presented. In these later cases, numbers less then 1 are possible (the parameters resulting from the retrained ANN can give worse results that the ones given by the original ANN), but were rare. 
+
+The first 3 domains in Table \ref{table:domains} have similar results: some quality-gain in training was consistently achieved, but the transfer of this improvement to the ANN-model was only partial. The phenomenon can appear because of the unambiguity of the mapping, or because the ANN is not complex enough for the mapping, or, and most probably, because the feature-set is not representative enough. On the other hand, the ANN model generalizes excellently to the independent test-set, at least for the first 3 domains. Quality-improvement ratios dropped only by 0.01, i.e. the knowledge incorporated in the ANN was transferable to the test cases and usable almost to the same extent than for the train set. The size of the training set seems not to be so crucial. For example for Freecell all the instances (108 out of 108 generated) could be used, because they were not so hard. On the other hand, only few  Grid instances (55 out of 107 generated) could be used. However, both performed well. The explanation for this may be that both the 32 and 108 instances covered well the whole range of solvable instances. 
+The situation is somewhat different for the last domain: Parking. Here we have a high quality-gain in training (almost 50\%), even much of this could be learned by the ANN, however, here we have a huge drop for the test-set. The reason for this is that when using the ANN as an extrapolation, there is a considerable number of instances which get unsolvable. Still, we get some overall gain in average, in fact we get the highest gain for this difficult domain. The main issue for such hard domains will be to avoid much more effectively unfeasible parameters when extrapolating the ANN-model for unknown instances.
 
 \section{Conclusions and Future Work}
 \label{section:conclusions}
 \label{section:futurework}	
 
-The LaO method presented in this paper is a surrogate-model based combined learner and optimizer for parameter tuning. LaO was demonstrated to be capable of improving the quality of the DaE algorithm consistently, even though it was run only for a few iterations. On-going work is concerned with running LaO for an appropriate number of iterations. A clearly visible result is also that some of this quality-improvement can be incorporated into an ANN-model, which is also able to generalize excellently to an independent test-set.
+The LaO method presented in this paper is a surrogate-model based combined learner and optimizer for parameter tuning. LaO was demonstrated to be capable of improving the quality of the DaE algorithm consistently, even though it was run only for a few iterations. Ongoing work is concerned with running LaO for an appropriate number of iterations. A clearly visible result is also that some of this quality-improvement can be incorporated into an ANN-model, which is also able to generalize excellently to an independent test-set.
 
 The most important experiment to carry out in the future is simply to test the algorithm with more iterations and on more domains -- and this will take several months of CPU even using a large cluster. Since LaO is only a framework, as indicated other kind of learning methods, and other kind of optimization techniques may be incorporated. If an ANN is used, the optimal structure has to be determined, or a more sophisticated solution is to apply one of the so-called Growing Neural Network architectures. Also the benefit of gene-transfer and/or crossover should be investigated further. Gene-transfer shall be improved so that chromosomes are transfered deterministically, measuring the similarity of instances by the similarity of their features. Present results indicate that the current feature set is too small and should be extended for better results. Also a more effective mechanism to avoid unfeasible parameters in the ANN-model has to be developed, especially for hard domains and instances.
 
